# small-group

./: .cursorrules  .env  .gitignore  Dockerfile  Procfile  README.md  app.py  divide.py  environment.yml  lambs.csv  member.py  panelapp.py  pyproject.toml  queries.py  requirements.txt  run.py  sdi.py  small-group.code-workspace  smallgroup.py  st_app.py  sync.sh  tests.py  update_env.sh  utility_funcs.py
.github/workflows/: deploy-app.yaml
app/: __init__.py  database.py  group_divider.py  member.py  models.py  routes.py  smallgroup.py
app/static/: style.css
app/templates/: base.html  data.html.j2  form.html.j2  inactive_members.html  index.html  index.html.j2  master.html.j2  shuffle.html.j2
app/templates/partials/: attendance_row.html  group_divisions.html  inactive_member_list.html  member_list.html  member_table_body.html
deployments/: group_divider.py
migrations/: add_prep_attended.py
scripts/: populate_db.py
static/: scripts-test.coffee  scripts.js
templates/: data.html  data.html.j2  error.html  error.html.j2  form.html  form.html.j2  index.html  index.html.j2  master.html  master.html.j2  shuffle.html  shuffle.html.j2
test/: __init__.py  test_group_divider.py
tests/: test_group_divider.py
