[project]
authors = [{name = "Eric Ma", email = "ericmajinglong@gmail.com"}]
description = "Add a short description here"
name = "small-group"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
small_group = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
fastapi = ">=0.115.6,<0.116"
uvicorn = ">=0.34.0,<0.35"
jinja2 = ">=3.1.5,<4"
sqlalchemy = ">=2.0.36,<3"
python-multipart = ">=0.0.20,<0.0.21"
